Reorganize maimai & ongeki

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,26 +159,26 @@ nav:
           - "Cab-to-Cab": "games/sega/chunithm/verse/c2c.md"
       - "maimai DX":
         - "BUDDiES":
-          - "Game Setup": "games/maimaidx/buddies/setup.md"
-          - "Controllers": "games/maimaidx/buddies/controllers.md"
-          - "Troubleshooting": "games/maimaidx/buddies/troubleshooting.md"
+          - "Game Setup": "games/sega/maimaidx/buddies/setup.md"
+          - "Controllers": "games/sega/maimaidx/buddies/controllers.md"
+          - "Troubleshooting": "games/sega/maimaidx/buddies/troubleshooting.md"
         - "PRiSM":
-          - "Game Setup": "games/maimaidx/prism/setup.md"
-          - "Controllers": "games/maimaidx/prism/controllers.md"
-          - "Troubleshooting": "games/maimaidx/prism/troubleshooting.md"
+          - "Game Setup": "games/sega/maimaidx/prism/setup.md"
+          - "Controllers": "games/sega/maimaidx/prism/controllers.md"
+          - "Troubleshooting": "games/sega/maimaidx/prism/troubleshooting.md"
         - "PRiSM PLUS":
-          - "Game Setup": "games/maimaidx/prismplus/setup.md"
-          - "Controllers": "games/maimaidx/prismplus/controllers.md"
-          - "Troubleshooting": "games/maimaidx/prismplus/troubleshooting.md"
+          - "Game Setup": "games/sega/maimaidx/prismplus/setup.md"
+          - "Controllers": "games/sega/maimaidx/prismplus/controllers.md"
+          - "Troubleshooting": "games/sega/maimaidx/prismplus/troubleshooting.md"
       - "O.N.G.E.K.I.":
         - "bright MEMORY":
-          - "Game Setup": "games/ongekibrightmemory/setup.md"
-          - "Controllers": "games/ongekibrightmemory/controllers.md"
-          - "Troubleshooting": "games/ongekibrightmemory/troubleshooting.md"
+          - "Game Setup": "games/sega/ongeki/brightmemory/setup.md"
+          - "Controllers": "games/sega/ongeki/brightmemory/controllers.md"
+          - "Troubleshooting": "games/sega/ongeki/brightmemory/troubleshooting.md"
         - "Re:Fresh":
-          - "Game Setup": "games/ongekirefresh/setup.md"
-          - "Controllers": "games/ongekirefresh/controllers.md"
-          - "Troubleshooting": "games/ongekirefresh/troubleshooting.md"
+          - "Game Setup": "games/sega/ongeki/refresh/setup.md"
+          - "Controllers": "games/sega/ongeki/refresh/controllers.md"
+          - "Troubleshooting": "games/sega/ongeki/refresh/troubleshooting.md"
       - "WACCA":
         - "Lily R":
           - "Game Setup": "games/sega/wacca/lilyr/setup.md"
@@ -214,10 +214,9 @@ not_in_nav: |
   games/bemani/sdvx/common
   games/bemani/ddr/common
   games/sega/chunithm/common
-  games/mu3
+  games/sega/maimaidx/common
+  games/sega/ongeki/common
   games/sega/wacca/common
-  games/mai2
-  games/ddr
 
 validation:
   links:
