update iidx 24 guide to new standard

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
           - "Troubleshooting": "games/bemani/iidx/14_gold/troubleshooting.md"
         - "24 SINOBUZ":
           - "Game Setup": "games/bemani/iidx/24_sinobuz/setup.md"
+          - "Extra Information": "games/bemani/iidx/24_sinobuz/extras.md"
           - "Troubleshooting": "games/bemani/iidx/24_sinobuz/troubleshooting.md"
         - "25 CANNON BALLERS":
           - "Game Setup": "games/bemani/iidx/25_cannonballers/setup.md"
