Revamp pop'n music guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ nav:
           - "Game Setup": "games/bemani/sdvx/6_exceedgear/setup.md"
           - "Extra Information": "games/bemani/sdvx/6_exceedgear/extras.md"
           - "Troubleshooting": "games/bemani/sdvx/6_exceedgear/troubleshooting.md"
-      - "Pop'n Music":
+      - "pop'n music":
         - "Usaneko":
           - "Game Setup": "games/bemani/popn/usaneko/setup.md"
           - "Troubleshooting": "games/bemani/popn/usaneko/troubleshooting.md"
