--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -270,7 +270,7 @@ nav:
   - Extras:
     - "Asphyxia": "extras/asphyxia.md"
     - "Audio": "extras/audio.md"
-    - "Cab-to-cab (ZeroTier)": "extras/zerotier.md"
+    - "Cab-to-Cab (ZeroTier)": "extras/zerotier.md"
     - "Controllers": "extras/controllers.md"
     - "Modding (Bemani)": "extras/datamods.md"
     - "Modding (Unity)": "extras/unity.md"
